--- a/pages/index/zh/404.md
+++ b/pages/index/zh/404.md
@@ -1,4 +1,12 @@
 
 
 
-<h1 style="width: 100%; text-align: center;">没有找到页面哦~</h1>
+<div id="home_page">
+    <h1 style="width: 100%; text-align: center;">404 NOT FOUND 未找到页面~</h1>
+    <div id="big_btn_wrapper">
+        <div class="big_btn">
+            <a href="/">Home 首页</a>
+        </div>
+    </div>
+</div>
+    
