add redirect link for old doc

--- a/pages/index/zh/404.md
+++ b/pages/index/zh/404.md
@@ -8,5 +8,14 @@
             <a href="/">Home 首页</a>
         </div>
     </div>
+    <div id="redirect" style="text-align: center;font-size: 1.5em;">
+        Find <a id="redirect_link" style="color: #ff6b63;"></a> ?
+    </div>
 </div>
-    
+<script>
+    (function(){
+        var redirect_url = "/maixpy" + window.location.pathname;
+        document.getElementById("redirect_link").href = redirect_url;
+        document.getElementById("redirect_link").innerHTML = redirect_url;
+    }());
+</script>
