[all] fix some format error

--- a/docs/maixpy/en/modules/others/mlx90640.md
+++ b/docs/maixpy/en/modules/others/mlx90640.md
@@ -4,9 +4,10 @@ keywords: maixpy, k210, AIOT, edge computing
 desc: maixpy ​​doc: MLX90640 serial infrared lens module
 ---
 
-
+<div style="center">
 <img src="./../../../assets/hardware/other/mlx90640_hot_map3.jpg">
 <img src="../../../assets/hardware/other/k210_mlx90640_hot_map2.jpg">
+</div>
 
 Can be used for non-contact temperature measurement.
 
