add grove ai hat

--- a/docs/maixpy/en/get_started/install_driver/ft2232.md
+++ b/docs/maixpy/en/get_started/install_driver/ft2232.md
@@ -1,7 +1,7 @@
 ---
-title: Maix Cube USB driver installation
+title: ft2232 USB Driver Installation
 keywords: maixpy, k210, AIOT, edge computing
-desc: maixpy ​​doc: Maix Cube USB driver installation
+desc: maixpy ​​doc: ft2232 USB driver installation
 ---
 
 
@@ -11,7 +11,7 @@ Linux does not need to install the driver, the system comes with it, use `ls /de
 
 ## Windows
 
-The development board uses `CH552` to simulate `FT2232`, `Windows` users need to install the driver of `FT2232`.
+`Windows` users need to install the driver of `FT2232`.
 
 - USB driver: **FT2232** ->[[download link here](https://dl.sipeed.com/MAIX/tools/ftdi_vcp_driver)](https://dl.sipeed.com/MAIX/tools/ftdi_vcp_driver)
 
